# RenderCraft

./: .gitmodules  CMakeLists.txt  README.md  film-maker.sh  final-project.docx
Core/: CMakeLists.txt
Core/apps/: obj-previewer.cc  rdcraft.cc
Core/include/Core/: BVH.h  Camera.h  EnvMap.h  Filter.h  Integrator.h  Light.h  Material.h  Medium.h  Mesh.h  Microfacet.h  Primitive.h  Ray.h  Record.h  RenderOptions.h  Scene.h  Shape.h  Spectrums.h  Sphere.h  Texture.h  Transform.h  Triangle.h  bvh.h  camera.h  core.h  debug.h  filters.h  image-io.h  integrators.h  interaction.h  light.h  log.h  material.h  maths.h  medium.h  memory.h  mesh.h  microfacet.h  obj-loader.h  parallel.h  phase-function.h  (+15 more)
Core/src/: BVH.cc  BVH.cpp  EnvMap.cpp  Filter.cpp  Integrator.cpp  Interaction.cpp  Light.cpp  Material.cpp  Microfacet.cpp  Record.cpp  Scene.cpp  Sphere.cpp  Texture.cpp  Triangle.cpp  bdpt.cc  bvh.cc  interaction.cc  main.cpp  materials.cc  microfacet.cc  obj-loader.c  obj-loader.cc  obj-loader.cpp  path-tracer.cc  path-tracer.cpp  phase-function.cpp  rand-gen.cc  rand-gen.cpp  record.cc  scene-parser.cc  scene-parser.cpp  sphere.cc  texture.cc  triangle.cc  vol-path.cc  vol-path.cpp
Core/tests/: scene-parser.cc  test-bvh.cc  test-parser.cc
Spatify/include/Spatify/: arrays.h  grids.h  ns-util.h
XMath/: MyMath.h
scenes/cbox/: cbox.xml
src/: BVH.cpp  BVH.h  Box.cpp  Box.h  EnvMap.cpp  EnvMap.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Lights.cpp  Lights.h  Material.cpp  Material.h  Materials.h  Matrix.h  Mesh.h  Microfacet.cpp  Microfacet.h  Object.cpp  Object.h  README.md  Ray.h  Ray.hpp  Scene.cpp  Scene.h  Scene.hpp  Shape.h  Sphere.cpp  Sphere.h  Texture.h  Triangle.cpp  Triangle.h  Vector.h  global.h  main.cpp  xml.cpp
src/render/: BVH.cpp  BVH.h  Box.cpp  Box.h  Camera.cpp  Camera.h  EnvMap.cpp  EnvMap.h  Filter.cpp  Filter.h  Integrator.cpp  Integrator.h  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Medium.h  Mesh.h  Microfacet.cpp  Microfacet.h  Object.cpp  Object.h  Primitive.h  Ray.h  Record.h  RenderOptions.h  Scene.cpp  Scene.h  Shape.h  Spectrums.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Texture.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  (+3 more)
src/utility/: Factory.cpp  Factory.h  objLoad.cpp  xml.cpp
