file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc src/*.cpp include/*.h)

add_library(rdcore ${srcs})
add_executable(rdcraft apps/rdcraft.cc)
target_include_directories(rdcore PUBLIC include)
target_include_directories(rdcore PUBLIC ${RENDERCRAFT_EXTERNAL}/glm)
target_include_directories(rdcore PUBLIC ${RENDERCRAFT_EXTERNAL}/pugixml/src)
target_include_directories(rdcore PUBLIC ${RENDERCRAFT_EXTERNAL}/tinyexr)
target_link_libraries(rdcore PUBLIC pugixml tinyobjloader Spatify tinyexr)
add_definitions(-DUSE_TBB)
add_definitions(-DRDCRAFT_SCENE_DIR="${RENDERCRAFT_SCENE_DIR}")
target_link_libraries(rdcraft PUBLIC rdcore TBB::tbb)

enable_testing()
# for all the files in tests, build test executables
file(GLOB_RECURSE test_srcs CONFIGURE_DEPENDS tests/*.cc)
foreach(test_src ${test_srcs})
    get_filename_component(test_name ${test_src} NAME_WE)
    add_executable(${test_name} ${test_src})
    target_link_libraries(${test_name} PUBLIC rdcore gtest gtest_main)
    add_test(NAME ${test_name} CONFIGURATIONS Debug COMMAND ${test_name})
endforeach()